--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^20.14.8",
     "axios": "^1.7.2",
     "echarts": "^5.5.0",
+    "echarts-wordcloud": "^2.1.0",
     "vue": "^3.4.29"
   },
   "devDependencies": {
