--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/node": "^20.14.8",
     "axios": "^1.7.2",
+    "countup.js": "^2.8.0",
     "echarts": "^5.5.0",
     "echarts-wordcloud": "^2.1.0",
     "vue": "^3.4.29"
